--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "juandelatorre/up-task_mvc",
-    "description": "Proyecto UpTask MVC, PHP 8, SASS",
+    "name": "alanmartinezdev/taskflow",
+    "description": "Proyecto TaskFlow MVC, PHP 8, SASS",
     "type": "project",
     "autoload": {
         "psr-4": {
