--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "uptask-php-mvc-sass",
+  "name": "taskflow",
   "version": "1.0.0",
-  "description": "UpTask - Curso Desarrollo web Completo",
-  "author": "Juan De la torre @codigoconjuan",
+  "description": "Proyecto TaskFlow MVC, PHP 8, SASS",
+  "author": "AlanMartinezDev",
   "main": "index.js",
   "type": "module",
   "scripts": {
